tests/pass/generic_fun_call.us
fn f<T>(x:T) -> T  {
    x;
}

fn main() {
    f::<i32>();
    f::<nil>();
}

fn f2<K>(a:K,b:K) -> K  {
    a+b;
}


fn main2() -> i32 {
    f2::<i32,i32>();
}