tests/fail/type_eqivilance.us
struct List <T> {
    val:T,
    head:nil
}
struct List2 <T> {
    val:T,
    head:nil
}

fn main(a:str) -> List<i32> {
    return List2{
        val:10,
        head:nil
    };
}

 // Expect : struct `List` != struct `List2`